# DemoBuildPipeline

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
tests/: test_main.cpp
